# vtk_in_bazel

./: .bazelrc  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel
vtk/: BUILD.bazel  test_vtk_setup.cc
