workspace(name = "vtk_in_bazel")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

_ALL_CONTENT = """\
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""

http_archive(
    name = "vtk",
    build_file_content = _ALL_CONTENT,
    urls = [ "https://www.vtk.org/files/release/9.1/VTK-9.1.0.tar.gz" ],
    strip_prefix = "VTK-9.1.0",
)
